# mesh_pose_detector

./: CMakeLists.txt  package.xml  setup.cfg  setup.py
msg/: DetectedObject.msg  DetectedObjects.msg
nodes/: server
pose_detector/: server.py
